fix label alignment to be centered on icons change opacity to 100% for background on label fix css for label

--- a/static/sass/layout/_main.scss
+++ b/static/sass/layout/_main.scss
@@ -52,9 +52,12 @@ html, body {
 }
 
 .pokemonlabel {
-	background: rgba(0, 0, 0, 0.44) none repeat scroll 0% 0%;
+	background: rgba(0, 0, 0, 1) none repeat scroll 0% 0%;
 	padding: 1px 4px 1px 4px;
 	border-radius: 25px;
+	text-align: center;
+	width: 50px;
+    white-space: nowrap;
 	font-size: 10px;
 	font-weight: 750;
 	color: #ffffff;
